# Bmelod

./: .gitattributes  .gitignore  CLA.md  CMakeLists.txt  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  bm_config.h.template
.github/workflows/: ci.yml
Demo/: CMakeLists.txt  PORTING.md  README.md
Demo/bms_estimation_loop/: CMakeLists.txt  README.md  bm_config_app.h
Demo/bus_servo/: CMakeLists.txt  app_bus_servo.h  bm_config_app.h  main.c  shell_cmds.c  shell_cmds.h
Demo/bus_servo/modules/: mod_supervisor.c  module_table.c
Demo/closed_loop_servo/: CMakeLists.txt  README.md  bm_config_app.h  main.c
Demo/closed_loop_servo/modules/: mod_supervisor.c
Demo/cmake/: demo_example_common.cmake  mp_demo_native.cmake  mp_demo_qemu_smp.cmake  native_sim_example.cmake  qemu_example.cmake
Demo/common/: example_support.c
Demo/core_sensor/: CMakeLists.txt  README.md  bm_config_app.h  main.c
Demo/daq_frontend/: CMakeLists.txt  README.md  bm_config_app.h
Demo/dual_core_audio/: CMakeLists.txt  bm_config_app.h  main.c
Demo/dual_core_bms/: CMakeLists.txt  bm_config_app.h  main.c
Demo/dual_core_fft/: CMakeLists.txt  bm_config_app.h  main.c
Demo/dual_core_motor/: CMakeLists.txt  bm_config_app.h  main.c
Demo/dual_core_stream/: CMakeLists.txt  bm_config_app.h  bm_config_qemu_smp.h  main.c
Demo/foc_current_loop/: CMakeLists.txt  README.md  bm_config_app.h
Demo/full_system/: CMakeLists.txt  README.md  bm_config_app.h  main.c
Demo/hrt_bms_coulomb/: CMakeLists.txt  README.md  bm_config_app.h
Demo/hrt_servo_stub/: CMakeLists.txt  README.md  bm_config_app.h
Demo/interrupt_demo/: CMakeLists.txt  README.md  bm_config_app.h  main.c
Demo/motor_foc_sensored/: CMakeLists.txt  README.md  bm_config_app.h
Demo/motor_foc_sensored/board/: README.md
Demo/mp_common/: bm_config_mp_demo.h  bm_config_mp_demo_qemu_smp.h  mp_relay_algo_demo.c  mp_relay_algo_demo.h
Demo/multi_axis_sync/: CMakeLists.txt  README.md  bm_config_app.h
Demo/multi_channel_bms/: CMakeLists.txt  README.md  bm_config_app.h  main.c
Demo/power_buck_loop/: CMakeLists.txt  README.md  bm_config_app.h
Demo/stream_array_mvdr/: CMakeLists.txt  README.md  app_array_mvdr.h  bm_config_app.h  main.c
Demo/stream_array_mvdr/modules/: mod_supervisor.c  module_table.c
Demo/stream_audio_agc/: CMakeLists.txt  README.md  bm_config_app.h
Demo/stream_block_rms/: CMakeLists.txt  README.md  bm_config_app.h
Demo/stream_bms_pipeline/: CMakeLists.txt  README.md  bm_config_app.h
Demo/stream_fft/: CMakeLists.txt  README.md  bm_config_app.h
Demo/stream_frontend/: CMakeLists.txt  README.md  app_stream_frontend.h  bm_config_app.h  main.c
Demo/stream_frontend/modules/: mod_supervisor.c  module_table.c
Demo/stream_vibration_diag/: CMakeLists.txt  README.md  bm_config_app.h
Demo/stream_vision_frame/: CMakeLists.txt  README.md  bm_config_app.h
Demo/tinyml_graph/: CMakeLists.txt  README.md  bm_config_app.h  main.c
Demo/tt_schedule_balance/: CMakeLists.txt  bm_config_app.h  main.c
Demo/ultra_blink/: CMakeLists.txt  README.md  bm_config_app.h  main.c
Demo/ultrasonic_frontend/: CMakeLists.txt  README.md  bm_config_app.h
Source/algo/: CMakeLists.txt  bmp_algo_audio.c  bmp_algo_bms.c  bmp_algo_fft.c  bmp_algo_motor.c  bmp_algo_motor_ekf.c  bmp_algo_vibration.c
Source/algorithm/: bm_algo_audio.c  bm_algo_battery.c  bm_algo_battery_model.c  bm_algo_calibration.c  bm_algo_comm.c  bm_algo_common.c  bm_algo_compensation.c  bm_algo_control.c  bm_algo_detection.c  bm_algo_estimator.c  bm_algo_features.c  bm_algo_fft.c  bm_algo_filter.c  bm_algo_fixed.c  bm_algo_fusion.c  bm_algo_image.c  bm_algo_motion.c  bm_algo_motor.c  bm_algo_power.c  bm_algo_power_quality.c  bm_algo_profile.c  bm_algo_resample.c  bm_algo_signal_quality.c  bm_algo_spectral.c  bm_algo_statistics.c  bm_algo_vision.c
Source/component/: additive_motion.c  audio_array_frontend.c  bms_estimation.c  bms_supervision.c  control_loop.c  daq_frontend.c  estimation_fusion.c  fault_derating.c  grid_control.c  mobile_base_control.c  motion_coordination.c  motion_profile.c  motor_current_sense.c  motor_foc_sensored.c  motor_foc_sensorless.c  navigation_frontend.c  power_control.c  power_converter.c  process_control.c  process_sequence.c  radar_frontend.c  robot_joint_control.c  (+7 more)
board/: PIL_EVIDENCE_TEMPLATE.md  README.md  WCET_REPORT_TEMPLATE.md  bm_board_envelope_stm32g4.h  sdk_stm32g4_CHECKLIST.md
cmake/: baremetal.cmake  bm_config_export.cmake  bm_console.cmake  bm_include_dirs.cmake  bm_port_arch.cmake  bm_port_resolve.cmake  bm_sdk_esp32_idf.cmake  bm_segger_rtt.cmake  bmelod.cmake  bmelod_library.cmake  bmelod_profiles.cmake  toolchain-aarch64-none-elf.cmake  toolchain-arm-none-eabi-a.cmake  toolchain-riscv-none-elf.cmake  toolchain-riscv64-none-elf.cmake  toolchain-xtensa-esp32.cmake
cmake/integration-snippet/: CMakeLists.append.txt  CMakeLists.txt  test_consumer.c
docs/: README.md
include/: README.md  bm_algorithm.h  bm_config.h  bm_core.h  bm_dsp.h  bm_hal.h  bm_hybrid.h  bm_lite.h  bm_ultra.h  bmelod.h
portable/: README.md
tests/arch/: CMakeLists.txt  README.md  bm_config.h  run_all.sh  test_arch_critical.c
tests/qemu/: CMakeLists.txt  README.md  bm_config_app.h  bm_config_smp.h  bm_probe.h  bm_qemu_tap.h  bm_rv64_tap.h  run_hybrid_smoke.ps1  run_qemu_tap.cmake  run_stream_smoke.ps1  run_uptime_smoke.ps1  test_det_icount_arm.c  test_det_icount_rv64.c  test_qemu_bus_smp.c  test_qemu_conc_core.c  test_qemu_conc_hybrid.c  test_qemu_smp_smoke.c  test_qemu_stream_smoke.c  test_qemu_uptime_smoke.c  uptime_smoke_out.txt
tests/qemu_cortexa_bus/: CMakeLists.txt  bm_config_cortexa_bus_smp.h
tests/qemu_cortexa_conc/: CMakeLists.txt  bm_config_cortexa_conc_core.h  bm_config_cortexa_conc_hybrid.h
tests/qemu_cortexa_conc_hybrid/: CMakeLists.txt
tests/qemu_cortexa_icount/: CMakeLists.txt  bm_config_icount.h
tests/qemu_rv64_icount/: CMakeLists.txt  bm_config_rv64_icount.h
tools/: check_api_alignment.py  check_config_template.py  check_fixed_point_gaps.py  fix_bm_config_app_encoding.py  list_sources.py  measure_size.py
(+509 files in other folders)
